shop now section

--- a/index.html
+++ b/index.html
@@ -654,6 +654,38 @@
         </div>
 
     </section>
+
+    <section class="container mx-auto mt-20 mb-12">
+        <div class="flex gap-5">
+            <div class="relative">
+                <div class="w-full h-400px">
+                    <img src="assests/images/2 (1).jpg" alt="" class="w-full object-cover">
+                </div>
+
+                <div class="absolute right-10 top-[15%]">
+                    <h2 class="text-[34px] leading-[45px] font-bold text-hero_text">Tasty Snacks<br>Fastfood</h2>
+                    <h2 class="text-[16px] leading-[25px] font-normal text-hero_text pt-2 tracking-wider">The Flavour Of<br>Something Special</h2>
+                    <div class="h-8 w-[100px] bg-green text-white mt-3 flex items-center justify-center rounded-[5px] font-semibold gap-2">
+                        <a href="" class="text-[14px]">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="relative">
+                <div class="w-full h-400px">
+                    <img src="assests/images/3 (1).jpg" alt="" class="w-full object-cover">
+                </div>
+
+                <div class="absolute right-10 top-[15%]">
+                    <h2 class="text-[34px] leading-[45px] font-bold text-hero_text">Fresh Fruits<br>& Veggies</h2>
+                    <h2 class="text-[16px] leading-[25px] font-normal text-hero_text pt-2 tracking-wider">A healthy Meal For<br>Everyone</h2>
+                    <div class="h-8 w-[100px] bg-green text-white mt-3 flex items-center justify-center rounded-[5px] font-semibold gap-2">
+                        <a href="" class="text-[14px]">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
    
     <script>
         feather.replace();
