--- a/index.html
+++ b/index.html
@@ -738,12 +738,18 @@
 
     <section class="container mx-auto mt-20 mb-12">
         <div class="w-full flex gap-5">
-            <div class="w-[25%] h-[300px]">
+            <div class="w-[25%] h-[300px] relative">
                 <img src="assests/images/4 (1).jpg" alt="" class="object-fit rounded-[5px]">
+                <div class="absolute top-2 p-7">
+                    <h2 class="text-[24px] font-bold text-hero_text tracking-wide">Our Top Most <br> Product Check It <br> Now</h2>
+                    <div class="h-8 w-[100px] bg-green text-white mt-8 flex items-center justify-center rounded-[5px] font-semibold gap-2">
+                        <a href="" class="text-[14px]">Shop Now</a>
+                    </div>
+                </div>
             </div>
             <div class="w-[25%]">
                 <div class="flex justify-between items-center mb-5">
-                    <h2 class="text-[24px] font-bold text-hero_text">Trending <span class="text-green">Items</span></h2>
+                    <h2 class="text-[26px] font-bold text-hero_text">Trending <span class="text-green">Items</span></h2>
                     <div class="flex ">
                         <i data-feather="chevron-left" class="w-[25px] h-[25px] icon-stroke"></i>
                         <i data-feather="chevron-right" class="w-[25px] h-[25px] icon-stroke"></i>
@@ -759,9 +765,9 @@
                             </div>
                             <div class="w-[70%] flex items-center">
                                 <div class="">
-                                    <h2 class="text-[16px]">Healthy Nutmix, 200g pa...</h2>
-                                    <h3 class="text-[14px] mt-3">Dried Fruit</h3>
-                                    <h3 class="font-bold text-hero_text mt-3 text-[14px]">$42.00 <span class="font-normal ml-2">$45.00</span></h3>
+                                    <h2 class="text-[15px] text-hero_text font-medium">Healthy Nutmix, 200g pa...</h2>
+                                    <h3 class="text-[14px] mt-3 text-text_gray">Dried Fruit</h3>
+                                    <h3 class="font-bold text-text_gray_2 mt-2 text-[14px]">$42.00 <span class="font-normal ml-2">$45.00</span></h3>
                                 </div>
                             </div>
                         </div>
@@ -801,7 +807,7 @@
             </div>
             <div class="w-[25%]">
                 <div class="flex justify-between items-center mb-5">
-                    <h2 class="text-[24px] font-bold text-hero_text">Top <span class="text-green">Rated</span></h2>
+                    <h2 class="text-[26px] font-bold text-hero_text">Top <span class="text-green">Rated</span></h2>
                     <div class="flex ">
                         <i data-feather="chevron-left" class="w-[25px] h-[25px] icon-stroke"></i>
                         <i data-feather="chevron-right" class="w-[25px] h-[25px] icon-stroke"></i>
@@ -828,12 +834,12 @@
                     <div class="w-full h-[120px] border border-stone-200 rounded-[5px]">
                         <div class="w-full h-full flex gap-5">
                             <div class="w-[30%] flex items-center">
-                                <img src="assests/images/11_1.jpg" alt="" class="w-full">
+                                <img src="assests/images/2_2.jpg" alt="" class="w-full">
                             </div>
                             <div class="w-[70%] flex items-center">
                                 <div class="">
                                     <h2 class="text-[15px] text-hero_text font-medium">Dates Values Pouch Date..</h2>
-                                    <h3 class="text-[14px] mt-3 text-text_gray">Dried Fruits</h3>
+                                    <h3 class="text-[14px] mt-3 text-text_gray">Driedfruits</h3>
                                     <h3 class="font-bold text-text_gray_2 mt-2 text-[14px]">$25.00 <span class="font-normal ml-2">$30.00</span></h3>
                                 </div>
                             </div>
@@ -843,12 +849,12 @@
                     <div class="w-full h-[120px] border border-stone-200 rounded-[5px]">
                         <div class="w-full h-full flex gap-5">
                             <div class="w-[30%] flex items-center">
-                                <img src="assests/images/19_1.jpg" alt="" class="w-full">
+                                <img src="assests/images/23_1.jpg" alt="" class="w-full">
                             </div>
                             <div class="w-[70%] flex items-center">
                                 <div class="">
-                                    <h2 class="text-[15px] text-hero_text font-medium">Coffe With Chocaolate C...</h2>
-                                    <h3 class="text-[14px] mt-3 text-text_gray">Dried Fruit</h3>
+                                    <h2 class="text-[15px] text-hero_text font-medium">Blue Berry</h2>
+                                    <h3 class="text-[14px] mt-3 text-text_gray">Fruit</h3>
                                     <h3 class="font-bold text-text_gray_2 mt-2 text-[14px]">$62.00 <span class="font-normal ml-2">$65.00</span></h3>
                                 </div>
                             </div>
@@ -859,7 +865,7 @@
             </div>
             <div class="w-[25%]">
                 <div class="flex justify-between items-center mb-5">
-                    <h2 class="text-[24px] font-bold text-hero_text">Trending <span class="text-green">Items</span></h2>
+                    <h2 class="text-[26px] font-bold text-hero_text">Top <span class="text-green">Selling</span></h2>
                     <div class="flex ">
                         <i data-feather="chevron-left" class="w-[25px] h-[25px] icon-stroke"></i>
                         <i data-feather="chevron-right" class="w-[25px] h-[25px] icon-stroke"></i>
@@ -871,13 +877,13 @@
                     <div class="w-full h-[120px] border border-stone-200 rounded-[5px]">
                         <div class="w-full h-full flex gap-5">
                             <div class="w-[30%] flex items-center">
-                                <img src="assests/images/10_1.jpg" alt="" class="w-full">
+                                <img src="assests/images/18_1.jpg" alt="" class="w-full">
                             </div>
                             <div class="w-[70%] flex items-center">
                                 <div class="">
-                                    <h2 class="text-[16px]">Healthy Nutmix, 200g pa...</h2>
-                                    <h3 class="text-[14px] mt-3">Dried Fruit</h3>
-                                    <h3 class="font-bold text-hero_text mt-3 text-[14px]">$42.00 <span class="font-normal ml-2">$45.00</span></h3>
+                                    <h2 class="text-[15px] text-hero_text font-medium">Lemon - Seedless</h2>
+                                    <h3 class="text-[14px] mt-3 text-text_gray">Vegetables</h3>
+                                    <h3 class="font-bold text-text_gray_2 mt-2 text-[14px]">$42.00 <span class="font-normal ml-2">$45.00</span></h3>
                                 </div>
                             </div>
                         </div>
@@ -886,13 +892,13 @@
                     <div class="w-full h-[120px] border border-stone-200 rounded-[5px]">
                         <div class="w-full h-full flex gap-5">
                             <div class="w-[30%] flex items-center">
-                                <img src="assests/images/11_1.jpg" alt="" class="w-full">
+                                <img src="assests/images/28_1.jpg" alt="" class="w-full">
                             </div>
                             <div class="w-[70%] flex items-center">
                                 <div class="">
-                                    <h2 class="text-[16px]">Organic Fresh Tomato</h2>
-                                    <h3 class="text-[14px] mt-3">Vegetable</h3>
-                                    <h3 class="font-bold text-hero_text mt-3 text-[14px]">$25.00 <span class="font-normal ml-2">$30.00</span></h3>
+                                    <h2 class="text-[15px] text-hero_text font-medium">Mango - Kesar</h2>
+                                    <h3 class="text-[14px] mt-3 text-text_gray">Vegetable</h3>
+                                    <h3 class="font-bold text-text_gray_2 mt-2 text-[14px]">$25.00 <span class="font-normal ml-2">$30.00</span></h3>
                                 </div>
                             </div>
                         </div>
@@ -901,13 +907,13 @@
                     <div class="w-full h-[120px] border border-stone-200 rounded-[5px]">
                         <div class="w-full h-full flex gap-5">
                             <div class="w-[30%] flex items-center">
-                                <img src="assests/images/19_1.jpg" alt="" class="w-full">
+                                <img src="assests/images/7_2.jpg" alt="" class="w-full">
                             </div>
                             <div class="w-[70%] flex items-center">
                                 <div class="">
-                                    <h2 class="text-[16px]">Coffe With Chocaolate C...</h2>
-                                    <h3 class="text-[14px] mt-3">Dried Fruit</h3>
-                                    <h3 class="font-bold text-hero_text mt-3 text-[14px]">$62.00 <span class="font-normal ml-2">$65.00</span></h3>
+                                    <h2 class="text-[15px] text-hero_text font-medium">Mixed Nuts & Almonds D..</h2>
+                                    <h3 class="text-[14px] mt-3 text-text_gray">Driedfruit</h3>
+                                    <h3 class="font-bold text-text_gray_2 mt-2 text-[14px]">$62.00 <span class="font-normal ml-2">$65.00</span></h3>
                                 </div>
                             </div>
                         </div>
@@ -917,6 +923,32 @@
             </div>
         </div>
     </section>
+
+    <section class="container mx-auto mt-20 mb-12">
+        <h2 class="text-[26px] font-bold text-hero_text">Lastest <span class="text-green">Blog</span></h2>
+        <div class="flex justify-between items-center">
+            <h3 class="mt-2 font-normal text-[16px] text-text_gray">We tackle interesting topics every day in 2023.</h3>
+            <div>
+                <a href="" class="font-normal text-text_gray">All Blogs
+                    <i class="fa fa-angle-right text-[12px] pl-1" aria-hidden="true"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="mt-10">
+            <div class="grid grid-cols-[repeat(auto-fit,minmax(120px,1fr))] gap-5">
+                <div class="h-[200px] w-full rounded-[10px]">
+                    <img src="assests/images/1.jpg" alt="" class="w-full object-fit">
+                </div>
+                <div class="h-[200px] bg-green border rounded-[10px]"></div>
+                <div class="h-[200px] bg-green border rounded-[10px]"></div>
+                <div class="h-[200px] bg-green border rounded-[10px]"></div>
+                <div class="h-[200px] bg-green border rounded-[10px]"></div>
+            </div>
+        </div>
+        
+    </section>
+
    
     <script>
         feather.replace();
