lastest blog images

--- a/index.html
+++ b/index.html
@@ -937,13 +937,21 @@
 
         <div class="mt-10">
             <div class="grid grid-cols-[repeat(auto-fit,minmax(120px,1fr))] gap-5">
-                <div class="h-[200px] w-full rounded-[10px]">
-                    <img src="assests/images/1.jpg" alt="" class="w-full object-fit">
+                <div class="h-[200px] w-full !rounded-md">
+                    <img src="assests/images/1 (2).jpg" alt="" class="w-full h-full object-cover">
                 </div>
-                <div class="h-[200px] bg-green border rounded-[10px]"></div>
-                <div class="h-[200px] bg-green border rounded-[10px]"></div>
-                <div class="h-[200px] bg-green border rounded-[10px]"></div>
-                <div class="h-[200px] bg-green border rounded-[10px]"></div>
+                <div class="h-[200px] w-full rounded-[10px]">
+                    <img src="assests/images/2 (2).jpg" alt="" class="w-full h-full object-cover">
+                </div>
+                <div class="h-[200px] w-full rounded-[10px]">
+                    <img src="assests/images/3 (2).jpg" alt="" class="w-full h-full object-cover">
+                </div>
+                <div class="h-[200px] w-full rounded-[10px]">
+                    <img src="assests/images/4 (2).jpg" alt="" class="w-full h-full object-cover">
+                </div>
+                <div class="h-[200px] w-full rounded-[10px]">
+                    <img src="assests/images/5 (1).jpg" alt="" class="w-full h-full object-cover">
+                </div>
             </div>
         </div>
         
