--- a/index.html
+++ b/index.html
@@ -937,20 +937,32 @@
 
         <div class="mt-10">
             <div class="grid grid-cols-[repeat(auto-fit,minmax(120px,1fr))] gap-5">
-                <div class="h-[200px] w-full !rounded-md">
-                    <img src="assests/images/1 (2).jpg" alt="" class="w-full h-full object-cover">
+                <div class="w-full rounded-md group">
+                    <div class="overflow-hidden rounded-md h-[200px]">
+                        <img src="assests/images/1 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                        group-hover:rotate-[-8deg] group-hover:scale-110">
+                    </div>
+                    <div class="mt-3">
+                        <span class="text-[14px] text-hero_text">June 30, 2022 - organic</span>
+                        <h3 class="mt-2 mb-3 text-[18px]">Marketing Guide: 5 steps to success to way.</h3>
+                        <span class="mt-2 text-[14px]">Read More >></span>
+                    </div>
                 </div>
-                <div class="h-[200px] w-full rounded-[10px]">
-                    <img src="assests/images/2 (2).jpg" alt="" class="w-full h-full object-cover">
+                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
+                    <img src="assests/images/2 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                    group-hover:rotate-[-8deg] group-hover:scale-110">
                 </div>
-                <div class="h-[200px] w-full rounded-[10px]">
-                    <img src="assests/images/3 (2).jpg" alt="" class="w-full h-full object-cover">
+                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
+                    <img src="assests/images/3 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                    group-hover:rotate-[-8deg] group-hover:scale-110">
                 </div>
-                <div class="h-[200px] w-full rounded-[10px]">
-                    <img src="assests/images/4 (2).jpg" alt="" class="w-full h-full object-cover">
+                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
+                    <img src="assests/images/4 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                    group-hover:rotate-[-8deg] group-hover:scale-110">
                 </div>
-                <div class="h-[200px] w-full rounded-[10px]">
-                    <img src="assests/images/5 (1).jpg" alt="" class="w-full h-full object-cover">
+                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
+                    <img src="assests/images/5 (1).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                    group-hover:rotate-[-8deg] group-hover:scale-110">
                 </div>
             </div>
         </div>
