lastest blog completed

--- a/index.html
+++ b/index.html
@@ -943,26 +943,54 @@
                         group-hover:rotate-[-8deg] group-hover:scale-110">
                     </div>
                     <div class="mt-3">
-                        <span class="text-[14px] text-hero_text">June 30, 2022 - organic</span>
+                        <span class="text-[14px] text-hero_text">June 30, 2022 - Organic</span>
                         <h3 class="mt-2 mb-3 text-[18px]">Marketing Guide: 5 steps to success to way.</h3>
                         <span class="mt-2 text-[14px]">Read More >></span>
                     </div>
                 </div>
-                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
-                    <img src="assests/images/2 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
-                    group-hover:rotate-[-8deg] group-hover:scale-110">
+                <div class="w-full rounded-md group">
+                    <div class="overflow-hidden rounded-md h-[200px]">
+                        <img src="assests/images/2 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                        group-hover:rotate-[-8deg] group-hover:scale-110">
+                    </div>
+                    <div class="mt-3">
+                        <span class="text-[14px] text-hero_text">April 02, 2022 - Fruits</span>
+                        <h3 class="mt-2 mb-3 text-[18px]">Best ways to solve business deal issue in market.</h3>
+                        <span class="mt-2 text-[14px]">Read More >></span>
+                    </div>
                 </div>
-                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
-                    <img src="assests/images/3 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
-                    group-hover:rotate-[-8deg] group-hover:scale-110">
+                <div class="w-full rounded-md group">
+                    <div class="overflow-hidden rounded-md h-[200px]">
+                        <img src="assests/images/3 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                        group-hover:rotate-[-8deg] group-hover:scale-110">
+                    </div>
+                    <div class="mt-3">
+                        <span class="text-[14px] text-hero_text">Mar 09, 2022 - Vegetables</span>
+                        <h3 class="mt-2 mb-3 text-[18px]">31 grocery customers stats know in 2019.</h3>
+                        <span class="mt-2 text-[14px]">Read More >></span>
+                    </div>
                 </div>
-                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
-                    <img src="assests/images/4 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
-                    group-hover:rotate-[-8deg] group-hover:scale-110">
+                <div class="w-full rounded-md group">
+                    <div class="overflow-hidden rounded-md h-[200px]">
+                        <img src="assests/images/4 (2).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                        group-hover:rotate-[-8deg] group-hover:scale-110">
+                    </div>
+                    <div class="mt-3">
+                        <span class="text-[14px] text-hero_text">January 25, 2022 - Fastfood</span>
+                        <h3 class="mt-2 mb-3 text-[18px]">Business idea to grow your business traffic.</h3>
+                        <span class="mt-2 text-[14px]">Read More >></span>
+                    </div>
                 </div>
-                <div class="h-[200px] w-full rounded-[10px] overflow-hidden group">
-                    <img src="assests/images/5 (1).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
-                    group-hover:rotate-[-8deg] group-hover:scale-110">
+                <div class="w-full rounded-md group">
+                    <div class="overflow-hidden rounded-md h-[200px]">
+                        <img src="assests/images/5 (1).jpg" alt="" class="w-full h-full object-cover transition-transform duration-500 ease-out 
+                        group-hover:rotate-[-8deg] group-hover:scale-110">
+                    </div>
+                    <div class="mt-3">
+                        <span class="text-[14px] text-hero_text">December 12, 2021 - Fruits</span>
+                        <h3 class="mt-2 mb-3 text-[18px]">Marketing Guide: 5 steps to success to way.</h3>
+                        <span class="mt-2 text-[14px]">Read More >></span>
+                    </div>
                 </div>
             </div>
         </div>
