--- a/index.html
+++ b/index.html
@@ -1269,12 +1269,42 @@
         
     </section>
 
-    <div class="w-full h-0.5px bg-gray mb-12">
+    <section class="mt-24">
+        <div class="w-full h-[2px] bg-gray mb-12">
+        </div>
+    </section>
 
-    </div>
+    <section class=" container mx-auto mt-20 mb-12">
+        <div class="w-full flex">
+            <div class="w-[25%]">
+                <img src="assests/images/logo.png" alt="">
+                <h2 class="mt-10 text-text_gray ">Grab is the biggest market of grocery product. Get your daily need from our store.</h2>
+                <div class="flex gap-3 w-full h-[50px]">
+                    <img src="assests/images/android.png" alt="" class="object-contain rounded-[5px] w-1/2">
+                    <img src="assests/images/apple.png" alt=""  class="object-contain rounded-[5px] w-1/2">
+                </div>
+            </div>
+            <div class="w-[75%]">
+                <div class="grid grid-cols-[repeat(auto-fit,minmax(200px,1fr))]">
+                    <div>
+                        <h2>Category</h2>
+                        <ul>
+                            <li><a href="">Dried Fruit</a></li>
+                            <li><a href="">Cookies</a></li>
+                            <li><a href="">Food</a></li>
+                            <li><a href="">Fresh Fruit</a></li>
+                            <li><a href="">Tuber Root</a></li>
+                            <li><a href="">Vegetable</a></li>
 
-    <section class="mt-10">
+                        </ul>
+                    </div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
 
+                </div>
+            </div>
+        </div>
     </section>
 
    
