social icons added

--- a/index.html
+++ b/index.html
@@ -1275,32 +1275,80 @@
     </section>
 
     <section class=" container mx-auto mt-20 mb-12">
-        <div class="w-full flex">
+        <div class="w-full flex gap-5">
             <div class="w-[25%]">
                 <img src="assests/images/logo.png" alt="">
-                <h2 class="mt-10 text-text_gray ">Grab is the biggest market of grocery product. Get your daily need from our store.</h2>
-                <div class="flex gap-3 w-full h-[50px]">
-                    <img src="assests/images/android.png" alt="" class="object-contain rounded-[5px] w-1/2">
-                    <img src="assests/images/apple.png" alt=""  class="object-contain rounded-[5px] w-1/2">
+                <h2 class="mt-10 text-text_gray">Grab is the biggest market of grocery product. Get your daily need from our store.</h2>
+                <div class="flex gap-3 w-full h-[50px] mt-5">
+                    <div class="w-[40%]">
+                        <img src="assests/images/android.png" alt="" class="object-contain rounded-[5px]">
+                    </div>
+                    <div class="w-[40%]">
+                        <img src="assests/images/apple.png" alt=""  class="object-contain rounded-[5px]">
+                    </div>
                 </div>
             </div>
             <div class="w-[75%]">
                 <div class="grid grid-cols-[repeat(auto-fit,minmax(200px,1fr))]">
                     <div>
-                        <h2>Category</h2>
-                        <ul>
-                            <li><a href="">Dried Fruit</a></li>
-                            <li><a href="">Cookies</a></li>
-                            <li><a href="">Food</a></li>
-                            <li><a href="">Fresh Fruit</a></li>
-                            <li><a href="">Tuber Root</a></li>
-                            <li><a href="">Vegetable</a></li>
+                        <h2 class="text-xl text-hero_text mb-5">Category</h2>
+                        <ul class="flex flex-col gap-5">
+                            <li><a href="" class="text-hero_text text-[15px]">Dried Fruit</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Cookies</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Food</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Fresh Fruit</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Tuber Root</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Vegetable</a></li>
 
                         </ul>
                     </div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div>
+                        <h2 class="text-xl text-hero_text mb-5">Company</h2>
+                        <ul class="flex flex-col gap-5">
+                            <li><a href="" class="text-hero_text text-[15px]">About Us</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Delivery</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Legal Notice</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Terms & condition</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Secure payment</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Contact us</a></li>
+
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="text-xl text-hero_text mb-5">Account</h2>
+                        <ul class="flex flex-col gap-5">
+                            <li><a href="" class="text-hero_text text-[15px]">Sign in</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">View cart</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Return policy</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">become a vendor</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Affilate program</a></li>
+                            <li><a href="" class="text-hero_text text-[15px]">Payments</a></li>
+
+                        </ul>
+                    </div>
+                    <div>
+                        <h2 class="text-xl text-hero_text mb-5">Contact</h2>
+                        <div class="flex flex-col gap-5">
+                            <div class="flex items-start gap-2">
+                                <i data-feather="map-pin" class="w-[40px] h-[40px] icon-stroke-green"></i>
+                                <span><a href="#" class="text-hero_text text-[15px]">2548 Broaddus Maple Court, Madisonville KY 4783, USA.</a></span>
+                            </div>
+                            <div class="flex items-start gap-2">
+                                <i class="fab fa-whatsapp text-green text-[22px] text-green" aria-hidden="true"></i>
+                                <span><a href="#" class="text-hero_text text-[15px]">+00 9876543210</a></span>
+                            </div>
+                            <div class="flex items-start gap-2">
+                                <i class="far fa-envelope text-green text-[22px] text-green" aria-hidden="true"></i>
+                                <span><a href="#" class="text-hero_text text-[15px]">+00 9876543210</a></span>
+                            </div>
+                            <div>
+                                <div class="h-10 w-10 rounded-[5px] bg-gray">
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
 
                 </div>
             </div>
